runtime js 설정 붙이기

--- a/public/survey.html
+++ b/public/survey.html
@@ -21,8 +21,9 @@
     <div class="action-area">
       <button id="btnStartSurvey" class="btn btn-primary" type="button">설문 시작하기</button>
     </div>
-  </main>
-  <script src="./session-guard.js"></script>
+  </main><script src="./runtime-config.js?v=1"></script>
+<script src="./session-guard.js"></script>
+<script src="./report.js"></script>
   <script src="./survey-entry.js"></script>
 </body>
 </html>
