--- a/public/done.html
+++ b/public/done.html
@@ -180,7 +180,10 @@ document.getElementById("goReportBtn")?.addEventListener("click", () => {
   location.href = `./report.html?sid=${encodeURIComponent(sid2)}`;
 });
 </script>
+<script src="./runtime-config.js?v=1"></script>
 <script src="./session-guard.js"></script>
+<script src="./report.js"></script>
+
 
 
 </body>
