--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,9 @@
   </div>
 </div>
 
+<script src="./runtime-config.js?v=1"></script>
 <script src="./session-guard.js"></script>
+<script src="./report.js"></script>
 <script type="module" src="app.js"></script>
 
 
