--- a/public/report.html
+++ b/public/report.html
@@ -154,7 +154,9 @@
   </footer>
 </div>
 
+<script src="./runtime-config.js?v=1"></script>
 <script src="./session-guard.js"></script>
 <script src="./report.js"></script>
+
 </body>
 </html>
