--- a/public/voice_info.html
+++ b/public/voice_info.html
@@ -249,7 +249,10 @@
     </footer>
   </div>
 
-  <script src="./session-guard.js"></script>
+  <script src="./runtime-config.js?v=1"></script>
+<script src="./session-guard.js"></script>
+<script src="./report.js"></script>
+
 
   <script>
     const NEXT_PAGE = "./voice_test.html";
