--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -517,6 +517,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <div style="margin-top: 40px;">
     </div>
+<script src="./runtime-config.js?v=1"></script>
 <script src="./session-guard.js"></script>
+<script src="./report.js"></script>
+
     </body>
 </html>
