report코드 끼워넣기

--- a/public/report.html
+++ b/public/report.html
@@ -148,6 +148,7 @@
       </table>
     </div>
   </div>
+  <div id="insightText" data-insight></div>
 
   <footer class="footer-note">
     본 리포트는 연구용 요약이며 의료 진단 목적으로 사용할 수 없습니다.
