--- a/public/report.html
+++ b/public/report.html
@@ -6,118 +6,73 @@
   <title>분석 리포트</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
   <style>
-    :root { 
-      --primary: #BB86FC; 
-      --primary-variant: #3700B3;
-      --secondary: #03DAC6;
-      --bg: #0F0F12; 
-      --card: #1E1E26; 
-      --muted: #A0A0AB; 
-      --border: rgba(255,255,255,0.08);
-    }
-
-    body { 
-      margin: 0; 
-      background: var(--bg); 
-      color: #F4F4F5; 
-      font-family: 'Pretendard', system-ui; 
-      line-height: 1.6;
-    }
-
+    :root { --primary: #BB86FC; --secondary: #03DAC6; --bg: #0F0F12; --card: #1E1E26; --muted: #A0A0AB; --border: rgba(255,255,255,0.08); }
+    body { margin: 0; background: var(--bg); color: #F4F4F5; font-family: 'Pretendard', system-ui; }
     .container { max-width: 900px; margin: 0 auto; padding: 40px 20px; }
-
-    /* Header Section */
-    .header { margin-bottom: 32px; }
-    .header-top { display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 12px; }
-    .title-area h1 { font-size: 28px; font-weight: 800; margin: 0; letter-spacing: -0.5px; }
-    .session-area { 
-    background: rgba(187,134,252,0.1); 
-    padding: 6px 14px; 
-    border-radius: 20px; 
-    font-size: 11px; 
-    color: var(--primary);
-    border: 1px solid rgba(187,134,252,0.2);
-  }
-  .index-grid {
-    display: flex; 
-    justify-content: space-around; 
-    text-align: center; 
-    padding: 20px;
-    background: linear-gradient(145deg, #23232e, #1e1e26);
-    margin-bottom: 24px;
-    border-radius: 20px;
-    border: 1px solid var(--border);
-  }
-  .index-item .val { font-size: 22px; font-weight: 800; margin-top: 4px; }
-  .index-item .label { font-size: 12px; color: var(--muted); font-weight: 500; }
-  
-    .copy-btn { 
-      background: none; border: none; color: var(--primary); 
-      cursor: pointer; font-size: 11px; margin-left: 8px; font-weight: 700;
-      text-decoration: underline;
-    }
-
-    /* Cards */
-    .card { 
-      background: var(--card); 
-      border: 1px solid var(--border); 
-      border-radius: 20px; 
-      padding: 24px; 
-      margin-bottom: 20px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.2);
-    }
-    
-    .section-title { font-size: 16px; font-weight: 700; margin-bottom: 16px; display: flex; align-items: center; gap: 8px; }
-    .section-title::before { content:''; display:block; width:4px; height:16px; background:var(--primary); border-radius:2px; }
-
-    /* Badges */
-    .badge-group { display: flex; gap: 8px; margin-top: 12px; }
-    .badge { padding: 4px 12px; border-radius: 6px; font-size: 12px; font-weight: 600; background: rgba(255,255,255,0.1); }
-    .badge.primary { color: var(--primary); border: 1px solid rgba(187,134,252,0.3); }
-
-    /* Tables */
-    .table-container { overflow-x: auto; }
-    table { width: 100%; border-collapse: collapse; margin-top: 8px; }
-    th { text-align: left; padding: 12px 8px; font-size: 13px; color: var(--muted); border-bottom: 1px solid var(--border); }
-    td { padding: 14px 8px; font-size: 14px; border-bottom: 1px solid var(--border); }
-
-    /* Grid Layout */
+    .header { margin-bottom: 24px; display: flex; justify-content: space-between; align-items: flex-end; }
+    .session-area { background: rgba(187,134,252,0.1); padding: 6px 14px; border-radius: 20px; font-size: 11px; color: var(--primary); }
+    .index-grid { display: flex; justify-content: space-around; text-align: center; padding: 20px; background: #1E1E26; margin-bottom: 24px; border-radius: 20px; border: 1px solid var(--border); }
+    .card { background: var(--card); border: 1px solid var(--border); border-radius: 20px; padding: 24px; margin-bottom: 20px; }
+    .badge { padding: 4px 10px; border-radius: 6px; font-size: 11px; font-weight: 600; background: rgba(255,255,255,0.1); margin-right: 5px; }
+    .badge.good { color: #4CAF50; } .badge.warn { color: #FFC107; } .badge.bad { color: #CF6679; }
     .grid-container { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
     @media (max-width: 768px) { .grid-container { grid-template-columns: 1fr; } }
-
-    /* Utilities */
-    .sub-text { color: var(--muted); font-size: 14px; }
-    canvas { width: 100%; height: 200px; margin-top: 10px; }
-    .footer-note { font-size: 12px; color: #666; text-align: center; margin-top: 40px; }
+    table { width: 100%; border-collapse: collapse; font-size: 13px; margin-top: 10px; }
+    th { text-align: left; color: var(--muted); border-bottom: 1px solid var(--border); padding: 8px; }
+    td { padding: 8px; border-bottom: 1px solid var(--border); }
+    canvas { width: 100%; height: 200px; }
+    .copy-btn { background: none; border: none; color: var(--primary); cursor: pointer; text-decoration: underline; font-weight: 700; margin-left: 5px; }
   </style>
 </head>
 <body>
+<div class="container">
+  <div class="header">
+    <div>
+      <h1 style="margin:0; font-size:28px;">분석 리포트</h1>
+      <div style="margin-top:8px;">
+        <span class="badge" id="qualityBadge">품질: -</span>
+        <span class="badge" id="baselineBadge">Baseline: -</span>
+      </div>
+    </div>
+    <div class="session-area">
+      SESSION <button class="copy-btn" id="copySidBtn">ID 복사</button>
+      <span id="sidText" style="display:none;"></span>
+    </div>
+  </div>
 
-<div class="card" style="display: flex; justify-content: space-around; text-align: center; padding: 15px;">
-  <div>
-    <div class="sub-text">인지 적응도</div>
-    <div id="index-adaptive" style="font-size: 20px; font-weight: 800; color: var(--secondary);">높음</div>
+  <div class="index-grid">
+    <div><div style="color:var(--muted); font-size:12px;">인지 적응도</div><div id="index-adaptive" style="font-size:22px; font-weight:800; color:var(--secondary);">-</div></div>
+    <div><div style="color:var(--muted); font-size:12px;">에너지 밀도</div><div id="index-energy" style="font-size:22px; font-weight:800; color:var(--primary);">-</div></div>
+    <div><div style="color:var(--muted); font-size:12px;">회복 탄력성</div><div id="index-resilience" style="font-size:22px; font-weight:800; color:var(--secondary);">-</div></div>
   </div>
-  <div style="width: 1px; background: var(--border);"></div>
-  <div>
-    <div class="sub-text">에너지 밀도</div>
-    <div id="index-energy" style="font-size: 20px; font-weight: 800; color: var(--primary);">우수</div>
-  </div>
-  <div style="width: 1px; background: var(--border);"></div>
-  <div>
-    <div class="sub-text">회복 탄력성</div>
-    <div id="index-resilience" style="font-size: 20px; font-weight: 800; color: var(--secondary);">안정</div>
-  </div>
-</div>
 
-  <footer class="footer-note">
-    본 리포트는 연구용 요약이며 의료 진단 목적으로 사용할 수 없습니다.
-  </footer>
+  <div class="card">
+    <div id="personaTitle" style="font-size:22px; font-weight:800; color:var(--primary); margin-bottom:8px;">데이터 분석 중...</div>
+    <p id="personaSummary" style="color:var(--muted); margin:0; font-size:15px;">정보를 구성하고 있습니다.</p>
+  </div>
+
+  <div class="grid-container">
+    <div class="card">
+      <div style="font-weight:700; margin-bottom:12px;">3D 분석 매트릭스</div>
+      <table><thead><tr><th>축</th><th>근거</th><th>해석</th></tr></thead><tbody id="matrixBody"></tbody></table>
+    </div>
+    <div class="card">
+      <div style="font-weight:700; margin-bottom:12px;">스테이지 변화 추이</div>
+      <canvas id="chart"></canvas>
+      <div id="chartLegend" style="font-size:11px; color:var(--muted); margin-top:10px;"></div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div style="font-weight:700; margin-bottom:12px;">스테이지별 상세 지표</div>
+    <table><thead><tr><th>Stage</th><th>상태</th><th>Rate</th><th>Pause</th><th>Pitch</th><th>SNR</th></tr></thead><tbody id="stageTableBody"></tbody></table>
+  </div>
+
+  <div id="qeegBox" style="text-align:right; color:var(--muted); font-size:12px; margin-top:10px;"></div>
 </div>
 
 <script src="./runtime-config.js?v=1"></script>
 <script src="./session-guard.js"></script>
 <script src="./report.js"></script>
-
 </body>
 </html>
