sid 제거 및 수정

--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -8,6 +8,8 @@
 </head>
 <script type="module">
   import { VoiceProcessor } from "./voice-processor.js?v=2";
+  import { stripSidOnNonReportPages } from "./session-guard.js";
+stripSidOnNonReportPages();
   import { setQuestionText, setDescriptionText, setTimer, setRecordButtonState } from "./voice-ui.js";
 
   // ---------------------------
