--- a/public/voice_info.html
+++ b/public/voice_info.html
@@ -255,6 +255,8 @@
 
 
   <script>
+        import { stripSidOnNonReportPages } from "./session-guard.js";
+stripSidOnNonReportPages();
     const NEXT_PAGE = "./voice_test.html";
 
     function getSid() {
